# SimpleVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  ПОЛНОЕ_РУКОВОДСТВО_ДЛЯ_НОВИЧКА.txt
.cache/clangd/index/: Bios.hpp.061948312BDC0457.idx  Command.hpp.34D711D5F11D5CCA.idx  Computer.cpp.C05680F5DD3B3925.idx  Computer.hpp.649C895108BA88AA.idx  FileDescriptor.hpp.0FCC2630790D1C09.idx  HardDrive.hpp.39C9DFB9E3D770D8.idx  MemoryBlock.hpp.64DEE303E24A08D2.idx  SimpleFileSystem.hpp.36C119D6B02AE3A8.idx  SimpleLazySequence.hpp.30A60ACA48D760F7.idx  StackMachine.hpp.62F93BCFF14B68B5.idx  main.cpp.2A758B47DA6B6277.idx  string_utils.c.20FF5E7EA1D94FE7.idx  string_utils.cpp.C1AA32CBC67806F0.idx  string_utils.h.B4A27D29E64944B4.idx  string_utils.hpp.7719BEF604F32738.idx
lib/: Cardinal.h  Computer.hpp  DynamicArray.h  all_header.h  string_utils.hpp
lib/BIOS/: Bios.hpp
lib/CPU/: Command.hpp  StackMachine.hpp
lib/CString/: cstring_bridge.hpp  string_utils.h
lib/Computer/: Computer.h
lib/Disk/: HardDrive.hpp
lib/FileSystem/: CMakeLists.txt  FileDescriptor.hpp  README.md  SimpleFileSystem.hpp  histogram.csv
lib/FileSystem/LibrarySequence/: ArraySequence.h  Deque.h  DynamicArray.h  HandleError.h  ImmutableArraySequence.h  ImmutableListSequence.h  LinkedList.h  ListSequence.h  MutableArraySequence.h  MutableListSequence.h  Sequence.cpp  Sequence.h  SkipListSequence.h  TuplePrinter.h  ZipOperationSequence.h  all_headers.h  numerable.h
lib/FileSystem/LibrarySequence/4/: AllTreeTest.h  BinaryTree.h  Person.h  TreeNode.h  a.out  main.cpp  Фдд
lib/FileSystem/LibrarySequence/4/temp (delete)/: TestBinaryTree.cpp
lib/FileSystem/src/: histogram.h  main.cpp  tests.h
lib/FileSystem/src/Interface/: idictionary.h  ipriority_queue.h  iset.h  isorted_sequence.h
lib/FileSystem/src/Realization/IDictionary/: bst_dict.h  hash_table_dict.h  sorted_array_dict.h
lib/FileSystem/src/Realization/IPriorityQueue/: hash_priority_queue.h  tree_priority_queue.h
lib/FileSystem/src/Realization/ISet/: array_set.h  hash_set.h  tree_set.h
lib/FileSystem/src/Realization/ISortedSequence/: sorted_sequence.h  tree_sorted_sequence.h
lib/FileSystem/src/Realization/ISortedSequence/function/: binary_search_variants.h
lib/FileSystem/src/VirtualFS/: virtual_file_system.h
lib/LazySequence/: Cardinal.h  DynamicArray.h  LazySequence.h  Sequence.h  SimpleLazySequence.hpp  all_headers.h
lib/Memory/: MemoryBlock.hpp
lib/Monitor/: Monitor.hpp
src/: main.cpp  monitor.cpp  string_utils.c  string_utils.cpp
src/Computer/: Computer.cpp
test/: README.md  main.c  test_computer.cpp  test_cpu.cpp  test_disk.cpp  test_filesystem.cpp  test_framework.hpp  test_main.cpp  test_memory.cpp
